--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Enter your Guess
 <input =text id ="textinput" name ="guessbox" maxlength="1">
 
 <button type ="button"  id = "submit">Submit</button>
+
+<button type ="button"  id = "reset">Reset</button>
 </form>
 
 
