functions make more sense, there is a start and reset function now

--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@ Hangman Burning Man Edition
 <div class="col-sm-6">
 
 <div id = "Alreadyguessed">
-
-
 </div>
 
-<img id = "pictureholder">
-</img>
+<div id = "pictureholder">
+</div>
 
 </div>
 
@@ -48,7 +46,6 @@ Hangman Burning Man Edition
 <div class="col-sm-6">
 Enter your Guess
 	<div id = "wins">
-	Wins:
 </div>
 
 <form>
@@ -68,7 +65,6 @@ Enter your Guess
 
 
 <div id = "attempts">
-Attempts Remaining
 </div>
 
 
