new files images audio and updated styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
 	<div class = "container">
 
 <div class = "row">
@@ -20,7 +19,8 @@
 <div class = "col">
 <header>
 
-Hangman Burning Man Edition
+Hangman <br>
+Space Man Edition
 
 </header>
 </div>
@@ -32,40 +32,57 @@ Hangman Burning Man Edition
 <div class="row">
 
 
-<div class="col-sm-6">
-
+<div class="col-lg-6">
+<br>
+<br>
 <div id = "Alreadyguessed">
 </div>
-
+<br>
+<br>
+<br>
 <div id = "pictureholder">
 </div>
 
 </div>
 
 
-<div class="col-sm-6">
-Enter your Guess
+<div class="col-lg-6">
+
 	<div id = "wins">
 </div>
 
+<br>
+<br>
+<br>
+<h3> Enter Your Guess </h3>
 <form>
 <input =text id ="textinput" name ="guessbox" maxlength="1">
 
-<button type ="button"  id = "submit">Submit</button>
+<button type ="button"  id = "submit">Check Guess</button>
 
-<button type ="button"  id = "reset">Reset</button>
+<button type ="button"  id = "reset">Play Again</button>
 </form>
 
-
+<br>
+<br>
+<br>
 
 
 <div id = "currentword">
 </div>
 
+<br>
+<br>
+<br>
 
 
 <div id = "attempts">
 </div>
+
+
+<audio id="myAudio">
+	<source type = "audio/mpeg">
+</audio>
 
 
 
@@ -75,6 +92,6 @@ Enter your Guess
 
 </div>
 </body>
-
+</div>
 
 </html>
